--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pre-flight.js",
   "description": "Lightweight EventEmitter Class.",
   "author": "Jarid Margolin <jaridmargolin@gmail.com>",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/jaridmargolin/pre-flight.js",
   "repository": {
     "type": "git",
@@ -16,6 +16,7 @@
   },
   "main": "dist/common/pre-flight.js",
   "devDependencies": {
+    "assist.js": "~0.2.0",
     "easy-build": "~0.0.3",
     "proclaim": "~2.0.0",
     "sinon": "~1.10.1"
